--- a/Modulo 0 - Seminario Previo Laboratorio/index.html
+++ b/Modulo 0 - Seminario Previo Laboratorio/index.html
@@ -54,7 +54,7 @@
         <div class="hotel-name">Hotel Majestic en Barcelona</div>
         <img src="./img/Majestic-actual-1.jpeg" alt="Hotel Majestic en Barcelona" class="hotel-img">
         <div class="hotel-description">Cualquiera que visite Barcelona unos días tiene que recorrer el Paseo de Gracia,
-          repleto de viviendas modernistas, y cualquier andadura por esta vía debe pararse en el Hotel Majestic.</div>
+          repleto de viviendas modernistas, y cualquier andadura por esta vía debee pararse en el Hotel Majestic.</div>
         <div class="hotel-phone">+34-555-555-555</div>
         <div class="hotel-rating">
           <span>&#9734;</span>
